src/app/chapter.css
h2 {
    position: unset;
    color: #222;
    padding: 5px 15px 5px 15px;
    margin-bottom: 0;
    font-size: 15px;
    font-family: "umbria";
    letter-spacing: 1px;
}

h3 {
    color: #b45f06;
    padding: 5px 15px 0px 15px;
    font-size: 17px;
    letter-spacing: 2px;
}

.center {
    margin: 0 auto;
}

.sidebarShell h5 {
    font-family: "umbria";
    color: #b45f06;
    padding: 0 0 10px;
    font-size: 15px;
}

.sidebarShell h2 {
    font-family: "ancient";
    font-size: 17px;
}

.sidebarShell h3 {
    font-size: 15px;
}

strong {
    font-family: "ancient";
    color: #222;
    font-size: 13px;
    font-weight: 700;
    letter-spacing: 2px;
}

body {
    margin: 0;
    padding: 2rem;
}

table {
    text-align: left;
    position: relative;
    border-collapse: collapse;
    font-size: 13px;
}

.racial-preferences-overflow {
    margin-left: 36px
}

.all-centered {
    text-align: center;
}

.all-centered thead tr:nth-child(1) th, .all-centered tbody tr td:nth-child(1), .all-centered tbody tr th:nth-child(1) {
    text-align: left;
}

thead tr:nth-child(n+2) th, tbody tr th {
    background-color: #222;
    font-size: 13px;
}

tbody tr th {
    background-color: rgb(87, 87, 87);
    color: whitesmoke;
}

.side-header-coloring th {
    background-color: #222 !important;
}

tbody tr:nth-child(even) {
    background-color: lightgrey;
}

th, td {
    padding: 4px 7px;
}

th {
    background: #990000;
    color: white;
    position: sticky;
    font-family: "ancient";
    letter-spacing: 2px;
}

.first-left tr td:first-child, .first-left tr th:first-child {
    text-align: left;
}

.fourth-left tr td:nth-child(4) {
    text-align: left;
}

.notSticky th {
    position: unset;
}

.with-side-header {
    top: 15px !important;
    position: absolute !important;
    width: 100%;
}

.side-header {
    display: flex;
}

.dark-side-header tr th {
    background-color: #222;
}

.float {
    float: right;
    margin: 0 0 10px 10px;
}

ol {
    padding-left: 67px;
}

.pairs {
    width: 75%;
}

.pair {
    display: flex;
    justify-content: space-between;
    font-family: "ancient";
    letter-spacing: 2px;
}

.table-overflow {
    overflow: auto;
    margin: 0 0 15px 0;
}

.orangeHeader {
    color: #b45f06
}

.table-center {
    margin: 0 auto;
}

ul {
    padding-left: 50px;
}

li {
    padding: 5px 0
}

.multiple-tables-shell {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-items: baseline;
}

.multiple-tables-shell table {
    margin-bottom: 15px;
}

@media (max-width: 770px) { 

    h2, h3 {
        text-align: center;
    }

    .sidebarShell  h2 {
        text-align: left;
    }

    th {
        top: 75px;
    }

    .table-overflow tr th {
        top: 20px;
    }

    .float {
        float: unset;
        margin: 10px auto;
    }

    .pairs {
        width: 100%;
    }

    .pair {
        align-items: center;
    }

    .pair p {
        text-indent: 0;
        width: 50%;
    }

    .pair p:nth-child(2) {
        text-align: right;
    }

    .sidebar-width {
        width: unset;
    }

    ol, ul {
        padding-left: 16px
    }

    .dark-side-header tr th {
        top: 0;
    }
}

